force-app/commons/triggerHandlerMdt/objects/TriggerAction__mdt/TriggerAction__mdt.object-meta.xml
<CustomObject>
    <description>Configure which apex classes should be run in trigger to process records.
Apex classes should be public and implement MetadataTriggerHandler.Logic interface.</description>
    <label>Trigger Action</label>
    <pluralLabel>Trigger Action</pluralLabel>
</CustomObject>