force-app/commons/triggerHandlerMdt/objects/TriggerAction__mdt/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <inlineHelpText>Name of public Apex Class implementing FieldDefaultRule interface.
Inner class can be referenced as well ex. &quot;AccountFieldDefaults.NameDefault&quot;, but both inner and outer class have to be public.</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>