force-app/commons/triggerHandlerMdt/objects/TriggerAction__mdt/fields/BypassPermission__c.field-meta.xml
<CustomField>
    <fullName>BypassPermission__c</fullName>
    <inlineHelpText>Custom Permission API name that bypasses action execution. Users with this permission will skip the action logic. Commonly used for integration users or system administrators. Example: Bypass_Account_Trigger</inlineHelpText>
    <label>Bypass Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>