force-app/commons/triggerHandlerMdt/objects/TriggerAction__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>