force-app/commons/triggerHandlerMdt/objects/TriggerAction__mdt/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <label>Parameters</label>
    <type>TextArea</type>
</CustomField>