force-app/commons/triggerHandlerMdt/objects/TriggerAction__mdt/fields/RequiredPermission__c.field-meta.xml
<CustomField>
    <fullName>RequiredPermission__c</fullName>
    <inlineHelpText>Custom Permission API name required for action execution. If the user lacks this permission, the action is skipped. Leave blank to allow execution for all users. Example: Edit_Account_Data</inlineHelpText>
    <label>Required Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>