force-app/commons/triggerHandlerMdt/objects/TriggerAction__mdt/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <label>Trigger</label>
    <referenceTo>TriggerSetting__mdt</referenceTo>
    <relationshipLabel>Trigger Actions</relationshipLabel>
    <relationshipName>TriggerActions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>