force-app/commons/triggerHandlerMdt/objects/TriggerAction__mdt/listViews/All_Triggers.listView-meta.xml
<ListView>
    <fullName>All_Triggers</fullName>
    <columns>MasterLabel</columns>
    <columns>Enabled__c</columns>
    <columns>Operation__c</columns>
    <columns>Order__c</columns>
    <columns>ApexClass__c</columns>
    <columns>Parameters__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Triggers</label>
    <language>en_US</language>
</ListView>